[package]
name = "arc-randomizer-folder"
version = "0.1.0"
authors = ["Ali Hussain (Coolsonickirby/Random) <alihussain2001@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
lazy_static = "1.4.0"
walkdir = "2"
rand = { git = "https://github.com/skyline-rs/rand" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true